# iris

./: .gitignore  Cargo.toml  README  README.md  campuspeaks-talk.md  fib.iris  iris-ref.md  iris.md  iris.txt  meson.build  meta.md  todo.txt
doc/: iris.spec
src/: array.rs  bytecode.rs  constants.rs  context.rs  data.rs  error.rs  functions.c  functions.h  iris.c  lib.rs  machine.c  machine.h  machine.rs  main.rs  memory.rs  mod.rs  op.rs  opcodes.h  parse.c  printer.rs  safeptr.rs  types.rs  vm.rs
src/alloc/: api.rs  blocks.rs  immix.rs  mod.rs
src/mem/: api.rs  blocks.rs  constants.rs  immix.rs  mod.rs
tests/: bytecode.rs  vm.rs
